<resources>
    <string name="app_name">Spiritual Tablets</string>
    <string name="hello_there">HELLO THERE! WELCOME BACK</string>
    <string name="log_in_to_continue">Log in to continue</string>
    <string name="username">Username</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="password">Password</string>
    <string name="forger_password">Forget Password?</string>
    <string name="go">Go</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="welcome">WELCOME</string>
    <string name="sign_up_to_start_your_journey">Sign up to start your journey</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_login">Already have an account? LogIn</string>
    <string name="full_name">Full Name*</string>
    <string name="update">Update</string>
    <string name="verify_mobile_no">Verify Mobile No</string>
    <string name="enter_verification_code_if_not_automatically_authenticated">Enter verification code if not automatically authenticated</string>
    <string name="verify">Verify</string>
    <string name="audio">Audios</string>
    <string name="video">Videos</string>
    <string name="books">Books</string>
    <string name="news_letters">News Letters</string>
    <string name="log_out">Log out</string>
    <string name="user_profile">User Profile</string>
    <string name="login">Already user? LogIn</string>
    <string name="no_internet_connection0">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="telugu_books_list">Telugu Books List</string>
    <string name="list">List</string>
    <string name="english_books_list">English Books List</string>
    <string name="telugu_audio_list">Telugu Audios List</string>
    <string name="zero">0:00</string>
    <string name="about_us">About Us</string>
    <string name="founder">Founder</string>
    <string name="principle">Principle</string>
    <string name="principle_desc_1"><![CDATA[As per the World Health Organisation definition, the main aim of these spiritual health care centres is to give good health by providing basic solution with self-energy for physical, mental, social and spiritual disparities. The main objective is to give extensive training in meditation & spiritual science apart from traditional medical system.]]></string>
    <string name="key_quotes">Key Quotes</string>
    <string name="key_quotes_desc">1. Lord Sri Krishna in Bhagavadgita – “Gnaanagni Dagdha Karmaanam !” \n\n 2. Jesus Christ in Holy Bible – “A good word brings relief”. \n\n 3. Brahmarshi Patriji – “Knowledge due to Meditation – freedom due to knowledge”. \n\n 4. Patriji – “Our sins are our weaknesses” – “Non-vegetarian is sinful food” \n\n 5. Patriji – “Leave Violence – Follow non-violence”. \n\n 6. Patriji – Spiritual intellect is the root – physical health is the fruit. \n\n 7. Lack of Spiritual Knowledge is the root cause for all sufferings – By Dr Gk.</string>
    <string name="reason_for_illness">Reason for Illness:</string>
    <string name="reason_for_illness_desc">Due to irregular, unwanted and un-scientific food habits, thinking methods and mutual relationships.</string>
    <string name="flow_chart">Flow Chart</string>
    <string name="mode_of_training_in_spiritual_health_care_centers">MODE OF TRAINING IN SPIRITUAL HEALTH CARE CENTERS</string>
    <string name="mode_of_training_in_spiritual_health_care_centers_desc">In this method, the persons with an ill-health are all considered as ECW (Energy-Consciousness-Wisdom) units, who are momentarily stagnated in unscientific belief systems. After an initial audio visual demo, they will be trained to meditate on ‘Natural breath observation’. There after importance of vegetarian food, significance of pyramid power and spiritual science will be explained. They are allowed to practice it for a minimum of 40 days at their home or centre and during which there will be a follow-up.Periodically, they can avail the opportunity to participate in group meditation and spiritual sharing with masters. They have to follow the spiritual advice given in the form of spiritual tablets during counseling which are available at libraries and spiritual health care centers. \n\nAfter getting symptomatic relief by basic training, they are allowed to participate in meditation classes to share their experiences. In due course of time, the patient should be examined by certified doctors (patient’s family doctors or by the organization) and the medication will be regularized accordingly. In some cases, as part of training they need to learn fine arts like dance and music. \n\nSimilar to other medical practices of prescribing tablets, 350 SPIRITUAL TABLETS are prepared in Spiritual health system. They are the heart of Spiritual Health Care Centers. These tablets (concepts) are easily understood and can be remembered by the patients for implementing in their daily life. They are available in the form of pamphlets, pocket books and audio/visuals. Prescribing these tablets as per the experience and requirement of patient is the main practice in Life health counseling. \n\nIn many cases, it has been proved that any kind of health problem is due to ignorance and lack of spiritual knowledge. Through health counseling, it will be cured at the root-level and the patient will be made self-sufficient to attain complete health.</string>
    <string name="procedure_initiation">Procedure/Initiation</string>
    <string name="procedure_initiation_desc">a) Basics of Meditation and 12 tablets (for 40 days)\n\n b) Spiritual health counselling: After Symptomatic Relief with Basic Meditation for 40 Days,efficient analytical Spiritual health Counselling based on their Meditational experiences, dreams and coincidences is given.\n\n c) Home Visit: Home visit facility is available for elderly and bed ridden patients.\n\n d) Childhood problems: For all kinds of childhood problems (MR. Autism, Behavioural problems and mental illness), spiritual training will be initially given to the parents. After getting some relief, training will be imparted to the diseased.\n\n e) For Serious cases (Terminal illness): 5 fold approach (Regular Meditation, In-charge of the material, GPM, Diet Energetic Environment and Relationship care taker(DEER), and a qualified DOCTOR.</string>
    <string name="follow_up">Follow Up</string>
    <string name="follow_up_desc">*Frequent Visits by efficient GPM’s to centres\n\n *Online Spiritual Counseling\n\n *Spiritual Prescriptions through mail\n\n *Phone follow up\n\n *Postal follow up\n\n *Dispensing of spiritual material</string>
    <string name="spiritual_doctor">Spiritual Doctor</string>
    <string name="spiritual_doctor_desc"><![CDATA[*The existing medical systems till date are all focusing at the body level\n\n *But the Meditation health system is a method where True Spiritual Science (Soul Science) will be taught to the person who is suffering from different ailments.\n\n *Once the blockage at Knowledge level or intellectual plane is combated, then problem at physical level will be cleared automatically.\n\n *The person who is trained in existing qualified medical system (medical & paramedical) is more eligible to learn spiritual tablets…the combination is more helpful in delivering efficient spiritual health counselling.]]></string>
    <string name="_12_tablets_for_complete_health">12 Tablets for Complete Health</string>
    <string name="_12_tablets_for_complete_health_desc"><![CDATA[1. Individual Meditation: ‘Doing Meditation by observation of natural breath’ can be done every day at any place or at any time.\n\n 2. Group Meditation: Meditation can be done in 40 days classes either at Meditation Centers or at their home along with all family members.\n\n 3. Pyramid meditation: Pyramid meditation will provide 3-times more cosmic energy. Therefore, one may use pyramid at the house or may go to a pyramid spiritual Centre for doing Meditation.\n\n 4. Full-moon Meditation: If Meditation is done through-out the night of a full-moon, the patient will get three times more energy and also will come to know about the reasons for his ill-health. He can identify whether the problem is with past life karma or due to present defective life pattern.\n\n 5. Vegetarianism: Eating non-vegetarian food (including eggs) should be avoided. The real food for human body is fruits and breath.\n\n 6. Optimal diet & silence: The daily work done by the organs is like food for the soul. One should take their food limitedly as per the requirement. As per the Masters advice and one’s own meditational experiences, he/she has to follow “complete silence.”\n\n 7. Reading of Spiritual Books: Read spiritual books daily to improve knowledge.\n\n 8. Sharing of Experiences: One should share their Meditational experiences with meditators to develop their spiritual knowledge.\n\n 9. Health Science Classes: One should participate in meditation classes conducted by senior masters or they should listen to the spiritual lectures transmitted in TV or other audio visual media.\n\n 10. Spiritual Health Counseling: Twice in a month one should interact with a senior master and discuss their personal experiences for any clarifications and plan their future practices.\n\n 11. Living with the nature: Once in a while,one should spend time in nature and take energy and joy.\n\n 12. Spiritual Science service: After attaining self knowledge and realizing the power of Vegetarianism and pyramid one should share their experiences with several other people and try to induce interest in them.\n\n The above twelve tablets will be made available at all spiritual health centers along with below mentioned facilities.]]></string>
    <string name="centre_facilities">Centre facilities</string>
    <string name="centre_facilities_desc"><![CDATA[1. Reception\n\n 2. Pyramid Meditation Room\n\n 3. Spiritual books library & A/V Room\n\n 4. Special powerful Pyramid Chamber\n\n 5. Life Health Counselling Chamber\n\n 6. Health science class-room\n\n 7. Spiritual Books and CDs for sale\n\n 8. Music & Dance learning centre.]]></string>
    <string name="_4_levels"><![CDATA[4 Levels ->]]></string>
    <string name="energy">Energy</string>
    <string name="knowledge">Knowledge</string>
    <string name="part_of_the_game">Part of the Game</string>
    <string name="no_mind">No Mind</string>
    <string name="chakras"><![CDATA[Chakras ->]]></string>
    <string name="body_parts">Body Parts</string>
    <string name="gland">Gland</string>
    <string name="chakra">Chakra</string>
    <string name="affirmation">Affirmation</string>
    <string name="body_part"><![CDATA[Body Parts ->]]></string>
    <string name="intellect">Intellect</string>
    <string name="mind">Mind</string>
    <string name="energy_blocks">Energy Blocks</string>
    <string name="body_part_1">Body Part</string>
    <string name="household"><![CDATA[Household ->]]></string>
    <string name="lack_of_clarity_on_purpose_of_life">Lack of clarity on purpose of life</string>
    <string name="unwanted_and_irregular_thoughts">Unwanted and irregular thoughts</string>
    <string name="failure_of_the_household_objects">Failure of the Household Objects</string>
    <string name="co_relates_to_the_illness">Co-relates to the illness</string>
    <string name="todo">TODO</string>
    <string name="cancel">Cancel</string>
    <string name="select_language">Select Language</string>
    <string name="books_may_vary_from_language_to_language">books may vary from language to language</string>
    <string name="kannada">Kannada</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="telugu">Telugu</string>
    <string name="check_or_uncheck">Check Or Uncheck</string>
    <string name="this_can_be_undone">This can be undone</string>
    <string name="check">Check</string>
    <string name="uncheck">Uncheck</string>
</resources>