<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="30sp"
    android:paddingStart="20sp"
    android:paddingEnd="20sp"
    android:paddingBottom="30dp"
    tools:context=".about_us.PrincipleActivity"
    android:background="@drawable/background_gradient">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20sp"
            android:src="@drawable/full_logo"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/principle"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/principle_desc_1"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/key_quotes"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/key_quotes_desc"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/reason_for_illness"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/reason_for_illness_desc"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/flow_chart"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#f1f1f1"
                android:layout_marginVertical="30dp"
                android:layout_marginHorizontal="10dp">

                <TableRow>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginHorizontal="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="#FFF"
                        android:text="@string/_4_levels"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="#FFF"
                        android:text="@string/energy"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="#FFF"
                        android:text="@string/knowledge"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"
                        android:gravity="center"
                        android:background="#FFF"
                        android:layout_weight="1"
                        android:text="@string/part_of_the_game"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="#FFF"
                        android:text="@string/no_mind"
                        android:textColor="@color/colorPrimaryDark"/>

                </TableRow>

                <TableRow>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="#FFF"
                        android:text="@string/chakras"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="#FFF"
                        android:text="@string/body_parts"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="#FFF"
                        android:text="@string/gland"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="#FFF"
                        android:text="@string/chakra"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="#FFF"
                        android:text="@string/affirmation"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"/>

                </TableRow>

                <TableRow>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="#FFF"
                        android:text="@string/body_part"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="#FFF"
                        android:text="@string/intellect"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="#FFF"
                        android:text="@string/mind"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="#FFF"
                        android:text="@string/energy_blocks"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="#FFF"
                        android:text="@string/body_part_1"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"/>

                </TableRow>

                <TableRow>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="1dp"
                        android:background="#FFF"
                        android:text="@string/household"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="#FFF"
                        android:text="@string/lack_of_clarity_on_purpose_of_life"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="#FFF"
                        android:text="@string/unwanted_and_irregular_thoughts"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="#FFF"
                        android:text="@string/failure_of_the_household_objects"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="#FFF"
                        android:text="@string/co_relates_to_the_illness"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"/>

                </TableRow>

            </TableLayout>

        </HorizontalScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/mode_of_training_in_spiritual_health_care_centers"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/mode_of_training_in_spiritual_health_care_centers_desc"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/procedure_initiation"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/procedure_initiation_desc"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/follow_up"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/follow_up_desc"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/spiritual_doctor"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/spiritual_doctor_desc"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/_12_tablets_for_complete_health"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/_12_tablets_for_complete_health_desc"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/centre_facilities"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/centre_facilities_desc"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"/>


    </LinearLayout>

</ScrollView>