<?xml version="1.0" encoding="utf-8"?>
<com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/select_language"
        android:textColor="#000"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="18sp"
        android:text="@string/books_may_vary_from_language_to_language"
        android:textColor="@android:color/darker_gray"/>

    <Button
        android:id="@+id/telugu_books"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telugu"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        style="@style/Widget.AppCompat.Button.Colored"/>
    <Button
        android:id="@+id/english_books"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/english"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        style="@style/Widget.AppCompat.Button.Colored"/>
    <Button
        android:id="@+id/hindi_books"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hindi"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        style="@style/Widget.AppCompat.Button.Colored"/>
   <Button
        android:id="@+id/kannada_books"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kannada"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        style="@style/Widget.AppCompat.Button.Colored"/>


    <Button
        android:id="@+id/alert_language_cancel"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

</com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>